fixed bug that didin't display icons, and rendered weird on safari

--- a/reuserat/static/standalone/faq-template/scss/mystyle.scss
+++ b/reuserat/static/standalone/faq-template/scss/mystyle.scss
@@ -14,8 +14,22 @@ Primary style
 
 -------------------------------- */
 
+
+
 //Set custom color variables to override the default ones.
 $color-2 : $first-color;
+
+
+.cd-faq{
+	*, *::after, *::before {
+		@include box-sizing(border-box);
+	}
+
+	*::after, *::before {
+		content: '';
+	}
+}
+
 
 body {
 
@@ -415,3 +429,9 @@ header {
 		}
 	}
 }
+
+
+
+
+/*======*/
+
